# code/api/rest-server/src/main/kotlin/io/juancrrn/balancercore/restserver/controllers/ExpensesController.kt
@@ -3,7 +3,7 @@ package io.juancrrn.balancercore.restserver.controllers
 import io.juancrrn.balancercore.application.queries.FindAllExpensesQuery
 import io.juancrrn.balancercore.application.usecases.UseCaseDispatcher
 import io.juancrrn.balancercore.restserver.api.ExpensesApi
-import io.juancrrn.balancercore.restserver.api.models.Expense
+import io.juancrrn.balancercore.restserver.api.models.EnrichedExpense
 import io.juancrrn.balancercore.restserver.api.models.RegisterExpense200Response
 import io.juancrrn.balancercore.restserver.api.models.RegisterExpenseRequest
 import io.juancrrn.balancercore.restserver.models.ext.toCommand
@@ -12,8 +12,6 @@ import kotlinx.coroutines.flow.Flow
 import kotlinx.coroutines.flow.asFlow
 import kotlinx.coroutines.flow.emitAll
 import kotlinx.coroutines.flow.flow
-import kotlinx.coroutines.flow.map
-import kotlinx.coroutines.reactive.asFlow
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import java.util.UUID
@@ -32,7 +30,7 @@ class ExpensesController(
         return ResponseEntity.ok().body(RegisterExpense200Response(id))
     }
 
-    override fun findExpenses(userId: UUID): ResponseEntity<Flow<Expense>> {
+    override fun findExpenses(userId: UUID): ResponseEntity<Flow<EnrichedExpense>> {
         return ResponseEntity.ok().body(
             flow {
                 emitAll(dispatcher.dispatch(FindAllExpensesQuery(userId)).map { it.toModel() }.asFlow())
