# code/api/rest-server/src/main/kotlin/io/juancrrn/balancercore/restserver/models/ext/ExpenseRecipientExt.kt
@@ -1,0 +1,11 @@
+package io.juancrrn.balancercore.restserver.models.ext
+
+import io.juancrrn.balancercore.restserver.api.models.ExpenseRecipient
+import io.juancrrn.balancercore.domain.entities.ExpenseRecipient as ExpenseRecipientEntity
+
+fun ExpenseRecipientEntity.toModel(): ExpenseRecipient {
+    return ExpenseRecipient(
+        id = id,
+        name = name,
+    )
+}
