# code/domain/src/main/kotlin/io/juancrrn/balancercore/domain/entities/ExpenseRecipient.kt
@@ -6,9 +6,11 @@ import java.util.UUID
  * The recipient of an expense.
  *
  * @property id Unique identifier.
+ * @property name Name of the recipient.
  */
 data class ExpenseRecipient(
     val id: ExpenseRecipientId,
+    val name: String,
 )
 
 typealias ExpenseRecipientId = UUID
